style/main-ltr.css
/* ... */
#translations ul {
    position: absolute; /* Absolute, within containing div #language_menu that is... */
    top: 26px;
    margin: -1px -2em 0 0;
    padding: 0;
    list-style: none;
    z-index: 3;
    display: none;
    box-shadow: -1px 1px 2px rgba(0,0,0,0.1);
    -moz-box-shadow: -1px 1px 2px rgba(0,0,0,0.1);
    -webkit-box-shadow: -1px 1px 2px rgba(0,0,0,0.1);
}

#translations li {
    width: 13em;
    margin: 0;
    padding: 0;
    text-align: left;
}

#translations:hover ul, #translations.sfhover ul {
    display: block;
}

#translations li a {
    display: block;
    margin: -1px 0 0 0;
    padding: 0.3em 0.3em 0.3em 0.5em;
    line-height: 1.0em;
    background-color: #FEFEFE;
    border: 1px #dfd9f9 solid;
    height: 100%;
}

#translations li a:hover {
    background: #EEEEEE;
    text-decoration: none;
    color: black;
}

#translations #is_current_language a {
    font-style: italic;
    color: gray;
}

#translations span.percent {
    color: gray;
    font-size: 0.6em;
    font-style: italic;
    padding-right: 1em;
    position: absolute;
    right: 0;
}

/*----------------------------------------------------
 * Main body
 *----------------------------------------------------*/

#global-container {
    min-height: 100%;
    position: relative;
}

#wrapper {
    max-width: 90%;
    min-width: 550px;
    margin: 0 auto;
    padding-top: 2em;
    padding-bottom: 7em; /* Height of the footer */
    width: 720px;
}

#mainbody {
    padding: 20px;
    border: 1px #D2D2D2 solid;
    background-color: #FFFFFF;
    margin-bottom: 2em;

    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    box-shadow: 0 0px 5px rgba(0,0,0,0.07);
    -moz-box-shadow: 0 0px 5px rgba(0,0,0,0.07);
    -webkit-box-shadow: 0 0px 5px rgba(0,0,0,0.07);
}

/*----------------------------------------------------
 * Headers (blue part + navigation bar)
 *----------------------------------------------------*/

#header {
    padding-bottom: 1em;
}

#header_picture_homepage {
    background: url(/images/header-ltr.jpg) top left no-repeat;
    margin-top: 0px;
    height: 130px;
    position: relative;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}

#header_picture {
    background: #ffffff url(/images/header-ltr.jpg) top left no-repeat;
    margin-top: 0px;
    padding: 8px 0;
    height: 50px;
    border-radius: 6px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}

#header_picture_homepage h1 {
    font-family: "MgOpen Cosmetica", Georgia, Times, "Times New Roman", FreeSerif, serif;
    font-size: 3.0em;
    color: #ffffff;
    margin-bottom: 10px;
    position: absolute;
    bottom: 0px;
    left: 15px;
    text-shadow: 0px 0px 5px #fff;
}

#header_picture h1 {
    font-family: "MgOpen Cosmetica", Georgia, Times, "Times New Roman", FreeSerif, serif;
    color: #ffffff;
    text-decoration: none;
    padding: 4px 15px;
    outline: 0;
    text-align: left;
    text-shadow: 0px 0px 5px #fff;
}

#header_picture a {
    color: #FFFFFF;
    text-decoration: none;
    display: block;
}

/*----------------------------------------------------
 * Navigation bar
 *
 * The naviagtion bar style is based on the `GNOME Grass`
 * theme by Vinicius Depizzol for gnome.org.
 *----------------------------------------------------*/

#top_bar {
    background: #fff url(/images/menu_bar_bg.png) top repeat-x;
    padding: 8px 0;
    margin-top: 0px;
    font-size: 16px;
    line-height: normal;
    text-align: left;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}

#top_bar ul {
    list-style: none;
    margin: 0;
    padding: 0 5px;
}

#top_bar ul li {
    display: inline;
    margin: 0 5px 0 0;
}

#top_bar a {
    font-size: 1.0em;
    color: #fff;
    text-decoration: none;
    padding: 4px 8px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    outline: 0;
    -webkit-transition: background 100ms linear;
    -moz-transition: background 100ms linear;
    transition: background 100ms linear;
    text-shadow: 0 1px 0 #000;
}

#top_bar a:hover {
    background: rgba(100%, 100%, 100%, 0.2);
}

#top_bar a:focus {
    background: rgba(100%, 100%, 100%, 0.15);
}

#top_bar a:active, #top_bar li.current-menu-item a, #top_bar li.current-menu-subitem a {
    background: #203F57;
    -moz-box-shadow: inset 0 -1px 0 rgba(100%,100%,100%, 0.4), inset 0 1px 3px rgba(0,0,0,0.4);
    -webkit-box-shadow: inset 0 -1px 0 rgba(100%,100%,100%, 0.4), inset 0 1px 3px rgba(0,0,0,0.4);
    box-shadow: inset 0 -1px 0 rgba(100%,100%,100%, 0.4), inset 0 1px 3px rgba(0,0,0,0.4);
}

#top_bar li.current-menu-subitem a {
    background: #2C5473;
}


/*----------------------------------------------------
 * Main contents
 *----------------------------------------------------*/

#maincontent { /* The actual (interesting!) text content, inside mainbody */
    margin-top: 3em;
    clear: none;
}

#maincontent img {
    clear: right;
    float: right;
    margin-left: 1em;
}

#intro_box {
    margin-top: 5em;
}

/*----------------------------------------------------
 * Subheader ("contents of chapter" box)
 * (only displays in level 2 pages)
 *----------------------------------------------------*/

#subheader {
    background-color: #E8F2FF;
    border-top: 2px solid #A2B5CD;
    clear: right;
    float: right;
    font-size: 0.8em;
    margin: 3em 0 2em 1.5em;
    padding: 0.5em 1em 0.5em 1em;
    max-width: 220px;
    min-width: 150px;
}
/* ... */

